<resources>
    <string name="app_name">Arti</string>
    <string name="action_settings">Settings</string>
    <string name="blutooth_not_supported">Este dispositivo no soporta Bluetooth</string>
    <string name="connecting">Conectando...</string>
    <string name="paired_devices_title">Dispositivos emparejados</string>
    <string name="new_devices_title">Dispositivos encontrados</string>
    <string name="title_activity_measurements">MeasurementsActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="title_activity_newprocess">New Process</string>
    <string name="new_missing_minutes">Introduzca los minutos para la cuenta regresiva</string>
    <string name="monitor_time_up">Se agotó el tiempo</string>
    <string name="notification_time_up">Se agotó el tiempo</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="device_list_title_paired">Dispositivos enlazados</string>
    <string name="device_list_button_scan">Escanear</string>
    <string name="device_list_title_other_devices">Dispositivos encontrados</string>
    <string name="main_send">Enviar</string>
    <string name="main_title_connected_to">Conectado con </string>
    <string name="main_messenger_user_myself">Me: </string>
    <string name="main_title_connecting">Conectando</string>
    <string name="main_title_not_connected">Sin conexión</string>
    <string name="main_bt_not_enabled_leaving">Bluetooth no está activo</string>
    <string name="main_not_connected">Sin conexión</string>
    <string name="main_menu_discoverable">Descubrible?</string>
    <string name="main_menu_connect">Conectar</string>
    <string name="device_list_select_device">device_list_select_device</string>
    <string name="device_list_none_found">No encontrado</string>
    <string name="device_list_scanning">Escaneando</string>
    <string name="device_list_none_paired">No se encontró dispositivos enlazados</string>
    <string name="monitor_not_connected">Sin conexión</string>
    <string name="main_ask">Solicitar</string>
    <string name="title_activity_splash">Splash</string>
    <string name="main_asking_for_data">He pedido datos</string>
    <string name="monitor_title">Monitor</string>
    <string name="monitor_end_process">Finalizar</string>
    <string name="menu_title">Artesanus Beer Menu</string>
    <string name="main_menu_no_previous_crafting">
        Wow!\n
        No has elaborado ninguna cerveza.\n
        ¡Empieza una ahora!\n</string>
    <string name="unpaired_fragment_no_pair_device">Este dispositivo no está emparejado con ningún dispositivo Bluetooth.
        Si no lo empareja ahora no podrá continuar.
        ¿Desea emparejarlo ahora?</string>
    <string name="unpaired_fragment_pair_devices">Emparejar</string>
    <string name="cancel">Cancelar</string>
    <string name="menu_device_wasnt_paired">El dispositivo no fue emparejado. No puede iniciarse el proceso</string>
    <string name="title_activity_newcrafting">Nueva Cerveza</string>
    <string name="new_crafting_name">Nombre</string>
    <string name="new_crafting_kind">Tipo</string>
    <string name="new_crafting_cereals">Cereales</string>
    <string name="new_crafting_hops">Lúpulos</string>
    <string name="new_crafting_mashing">Maceración</string>
    <string name="new_crafting_step">Escalones</string>
    <string name="ok">OK</string>
    <string name="title_item_picker">Escoge un tipo de cerveza</string>
    <string name="new_crafting_litre">Litros</string>
    <string name="add_cereal_kind">Cereal</string>
    <string name="add_cereal_amount">Cantidad</string>
    <string name="list_row_cereal_kilogram">Kg</string>
    <string name="list_row_cereal_minutes">minutos</string>
    <string name="list_row_hop_minutes">min</string>
    <string name="temperature">Temperatura</string>
    <string name="heat_tv_start">Iniciar en</string>
    <string name="heat_tv_duration">Duración</string>
    <string name="degrees_symbol">ºC</string>
    <string name="minutes_symbol">\'</string>
    <string name="minutes_abreviature">min</string>
    <string name="kilogram_abreviature">Kg</string>
    <string name="grams_abreviature">gr</string>

</resources>
